--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
+    "@apollo/gateway": "^0.18.0",
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
