--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:migrate:save": "prisma migrate save --schema src/prisma/schema.prisma --experimental",
+    "prisma:migrate:up": "prisma migrate up --schema src/prisma/schema.prisma --experimental",
+    "prisma:generate": "prisma generate --schema src/prisma/schema.prisma"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.5.5",
     "@nestjs/platform-express": "^7.0.0",
+    "@prisma/client": "^2.3.0",
     "apollo-server-express": "^2.16.0",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.0.15",
@@ -37,6 +41,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@prisma/cli": "^2.3.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
