--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 DATABASE_URL=postgresql://postgres:postgres@localhost:32768/nestjs-graphql-db?schema=public
+JWT_SECRET=secret
+JWT_EXPIRATION_TIME=60s
+JWT_REFRESH_SECRET=refresh_secret
+JWT_REFRESH_EXPIRATION_TIME=7d
